--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@danedavid/osm-to-geojson-web",
   "version": "1.0.0",
   "description": "Web application to view OSM data in GeoJSON format",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start-server": "nodemon server.js"
+    "start:server": "nodemon server.js",
+    "test:server": "cross-env NODE_ENV=test jest --testTimeout=10000"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,11 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "cross-env": "^7.0.3",
+    "geojson-validation": "^1.0.2",
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
+    "supertest": "^6.2.4"
   }
 }
