--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Web application to view OSM data in GeoJSON format",
   "main": "index.js",
   "scripts": {
-    "start:server": "nodemon server.js",
+    "start:server": "nodemon",
     "test:server": "cross-env NODE_ENV=test jest --testTimeout=10000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "osmtogeojson": "^3.0.0-beta.4",
+    "query-string": "^7.1.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
