--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "osmtogeojson": "^3.0.0-beta.4",
-    "query-string": "^7.1.1"
+    "query-string": "^7.1.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
