--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Web application to view OSM data in GeoJSON format",
   "main": "index.js",
   "scripts": {
-    "start:server": "nodemon",
+    "start:server": "nodemon --config nodemon.config.js",
+    "start:client": "cd client && npm start",
+    "dev": "npm-run-all -p start:client start:server",
     "test:server": "cross-env NODE_ENV=test jest --testTimeout=10000"
   },
   "author": "",
@@ -22,6 +24,7 @@
     "geojson-validation": "^1.0.2",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
     "supertest": "^6.2.4"
   }
