--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:server": "nodemon --config nodemon.config.js",
     "start:client": "cd client && npm start",
     "dev": "npm-run-all -p start:client start:server",
-    "test:server": "cross-env NODE_ENV=test jest --testTimeout=10000"
+    "test:server": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "test:client": "cd client && npm test"
   },
   "author": "",
   "license": "ISC",
