--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "osmtogeojson": "^3.0.0-beta.4",
+    "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "validator": "^13.7.0"
   },
