--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
